--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <title>Voxel Designer</title>
     <link rel="image_src" href="http://fatiherikli.github.io/voxel/static/example.jpg" />
     <meta name="og:description" content="Voxel designing tool built on top of css transformations" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P6KKLCD');</script>
+<!-- End Google Tag Manager -->
   </head>
   <body>
     <div id='root'>
